# cpp-apiserver-template

./: README.md  cookiecutter.json
{{cookiecutter.projectName}}/: CMakeLists.txt  Dockerfile.builder  README.md  tests.http
{{cookiecutter.projectName}}/include/api/models/: hello_world_response.hpp
{{cookiecutter.projectName}}/include/api/views/: hello_world_view.hpp
{{cookiecutter.projectName}}/include/api/views/impl/: hello_world_view_impl.hpp
{{cookiecutter.projectName}}/include/utils/: helpers.hpp
{{cookiecutter.projectName}}/src/: hello_world_response.cpp  hello_world_view.cpp  hello_world_view_impl.cpp  helpers.cpp  main.cpp
